(lang dune 3.10)

(name personal_pipelines2)

(generate_opam_files true)

(authors "Edwin Török")

(maintainers "Edwin Török")

(license TODO)


(package
 (name personal_pipelines2)
 (synopsis "CI helper")
 (description "Build and test koji updates")
 (depends ocaml dune current_web current_git lwt_eio current prometheus-app))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
